--- a/app/assets/stylesheets/genres/genres_index.css
+++ b/app/assets/stylesheets/genres/genres_index.css
@@ -30,6 +30,7 @@
 
 .genres-index-li {
     width: 100%;
+    margin-bottom: 4%;
 }
 
 .video-react .video-react-video {
